# whitewater-image-insight

./: .env.test  .gitignore  README.md  instructions.baml  pyproject.toml  requirements.txt
app/: conftest.py  main.py  test_main.py
app/__stubs__/: settings.py
app/agentic/agents/: analyser.py  analysis_team.py  check_result.py
app/agentic/instructions/: instructions.md
app/agentic/tools/: image.py  image_simple.py  test_image.py
app/config/: settings.py
app/model/: health.py  schemas.py
app/prompting/: extractor.py  prompts.py
app/repositories/: image.py  test_image.py
app/routes/: health.py  info.py  test_health.py
app/service/: image.py
app/workflows/: eu-pipeline.py
architecture/: images.md
baml_src/: analyser.baml  clients.baml  generators.baml  resume.baml
test/baml/: templating.py
tmp/db/: img-db.json  results
