[project]
name = "whitewater-image-insight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.1.0",
    "bandit>=1.8.6",
    "fastapi[standard]>=0.117.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mypy>=1.18.1",
    "openai>=2.0.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.2",
    "safety>=3.6.2",
    "taskipy>=1.14.1",
    "uvicorn>=0.37.0",
    "prefect>=3.4.25",
    "baml-py>=0.214.0",
    "baml-cli>=0.1.0",
]
